# xapian-bridge

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  com.endlessm.XapianBridge.json  configure.ac  xapian-bridge.in
data/: xapian-bridge.service.in
debian/: .gitignore  changelog  control  copyright  xapian-bridge.service  xapian-bridge.socket
src/: config.js.in  databaseCache.js  databaseManager.js  prefixStore.js  routedServer.js  router.js  xapianBridge.js  xb-database-cache.c  xb-database-cache.h  xb-database-manager.c  xb-database-manager.h  xb-error.c  xb-error.h  xb-main.c  xb-prefix-store.c  xb-prefix-store.h  xb-routed-server.c  xb-routed-server.h  xb-router.c  xb-router.h
test/: generate-test-db.c  manifest.json  test-daemon.c  test-database-cache.c  test-database-manager.c  test-prefix-store.c  test-router.c  test-util.c  test-util.h  testdb.glass
test/testdb/: iamchert  postlist.DB  record.DB  termlist.DB
test/unit/: testCache.js  testPrefixStore.js  testRouter.js
